# trajectory_process_utils

./: README.md
offline_trajectory_process/: CMakeLists.txt  README.md  package.xml
offline_trajectory_process/config/: movement_detection.yaml
offline_trajectory_process/launch/: movement_detection.launch
offline_trajectory_process/scripts/: movement_detection.py  static_points_filtering_server.py
offline_trajectory_process/srv/: Filtering.srv
online_trajectory_process/: README.md
online_trajectory_process/config/: online_trajectory_process.yaml
online_trajectory_process/launch/: online_trajectory_process.launch
online_trajectory_process/scripts/: downsampling_interpolation_process.py  piecewise_bezier_process.py  raw_points_process.py
trajectory_smoothing/: README.md
trajectory_smoothing/scripts/: trajectory_smoothing_server.py
trajectory_smoothing/scripts/smooth_files/: Bezier_curves.py
ur3_trajectory_process/: README.md
ur3_trajectory_process/include/ur3_trajectory_process/: ur3_trajectory_process.h
ur3_trajectory_process/launch/: ur3_trajectory_process.launch
ur3_trajectory_process/src/: ur3_trajectory_process.cpp
